<resources>
    <string name="app_name">module_tech</string>

    <string name="main_fragment">首页</string>

    <string name="activity_main_fragment">Activity实践</string>
    <string name="activity_flag_fragment">测试Activity flag的使用</string>
    <string name="activity_flag_button">点击跳转</string>
    <string name="activity_animation_button">点击返回</string>

    <string name="practice_main_fragment">技术实践</string>
    <string name="custom_glide_fragment">Glide扩展图片类型</string>
    <string name="dns_test_fragment">测试DNS直连</string>

    <string name="drawable_main_fragment">Drawable、动画、过渡动画</string>
    <string name="drawable_test_fragment">测试各种drawable效果</string>
    <string name="animation_test_fragment">测试各种animation效果</string>
    <string name="animator_test_fragment">测试各种animator效果</string>
    <string name="vector_anim_test_fragment">测试vector anim效果</string>
    <string name="vector_scene_transition_test_fragment">测试各种过渡效果</string>

    <string name="service_main_fragment">后台服务、通知、JobScheduler、WorkManager</string>
    <string name="remote_view_test_fragment">测试RemoteView效果</string>

</resources>